--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
     <!-- Header Section -->
     <header class="bg-gray-800 p-4 shadow-lg sticky top-0 z-50">
         <div class="container mx-auto flex items-center justify-between">
-            <a href="index.html" class="text-2xl font-bold text-blue-500">
-                <span style="color: red;">DICA</span><span style="color: white;">KUN</span>
-            </a>
+            <a href="index.html" class="text-2xl font-bold text-red-500"><span class="text-red-500">DICA</span><span class="text-white">KUN</span></a>
             <div class="flex items-center space-x-4">
                 <input type="text" placeholder="Cari donghua..." class="hidden md:block p-2 rounded-full bg-gray-700 text-gray-100 placeholder-gray-400 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
                 <button class="text-gray-400 hover:text-blue-500 focus:outline-none search-icon">
@@ -182,16 +180,15 @@
             <script type="text/javascript" src="//www.highperformanceformat.com/ffdff708edae7939e16ca710f413b948/invoke.js"></script>
     </div>
 
+    <!-- Social Bar -->
+    <script type='text/javascript' src='//pl27633652.revenuecpmgate.com/79/ba/cb/79bacb53d815e6ef8c58c6adec366111.js'></script>
+
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-center p-4 mt-8">
         <p class="text-sm text-gray-400">&copy; 2025 DICAKUN. Hak Cipta Dilindungi.</p>
     </footer>
 
-    <!-- Skrip untuk Adsterra Social Bar -->
-    <script type='text/javascript' src='//pl27633652.revenuecpmgate.com/79/ba/cb/79bacb53d815e6ef8c58c6adec366111.js'></script>
-    <!-- Akhir dari skrip Adsterra Social Bar -->
-
-    <!-- Scripts -->
+    <!-- Script files -->
     <script src="movie.js"></script>
     <script src="script.js"></script>
 </body>
