--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <span class="text-red-500">DICA</span><span class="text-white">KUN</span>
             </a>
             <div class="flex items-center space-x-4">
-                <input type="text" placeholder="Cari donghua..." class="hidden md:block p-2 rounded-full bg-gray-700 text-gray-100 placeholder-gray-400 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                <button class="text-gray-400 hover:text-blue-500 focus:outline-none search-icon">
+                <input id="searchInput" type="text" placeholder="Cari donghua..." class="hidden md:block p-2 rounded-full bg-gray-700 text-gray-100 placeholder-gray-400 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <button id="searchButton" class="text-gray-400 hover:text-blue-500 focus:outline-none search-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                     </svg>
